# ChangeLog for net-ftp/bbftp-server
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  10 Nov 2014; Justin Lecher <jlec@gentoo.org> -bbftp-server-3.2.0.ebuild,
  +bbftp-server-3.2.1.ebuild, metadata.xml:
  Bump EAPI; respect CC; version Bump

  24 Jun 2011; Justin Lecher <jlec@gentoo.org> bbftp-server-3.2.0.ebuild:
  Sort inherit and/or USE

  23 Jun 2010; Andreas K. Huettel (dilfridge) <mail@akhuettel.de>
  bbftp-server-3.2.0.ebuild:
  QA fixes

  07 Jan 2010; Bryan D. Green <bryan.d.green@nasa.gov>
  +files/3.2.0-deffixes.patch, bbftp-server-3.2.0.ebuild:
  added patch to fix missing definitions

*bbftp-server-3.2.0 (01 Dec 2007)

  01 Dec 2007; Bryan Green <bryan.d.green@nasa.gov> ChangeLog:
  initial import
